Restore WorkFolder data for Ctags, Jmol, dnsjava; update .gitignore to track all project folders; exclude oversized CSVs